<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="negativeLabel">-%2$s = %1$s kg</string>
    <string name="neutralLabel">%1$s kg</string>
    <string name="positiveLabel">+%2$s = %1$s kg</string>
    <string name="title_result">result of %1s</string>
    <string name="title_weight">%1$skg</string>
    <string name="title_exercise_with_weight">%1$s: %2$skg</string>
    <string name="new_exercise_name">new exercise</string>
    <string name="edit_weight_title">weight - %1s</string>
    <string name="edit_effort_title">"effort - %1s"</string>
    <string name="edit_confirmation_title">save - %1s</string>
    <string name="edit_weight_bar_title">xx.x</string>
    <string name="edit_weight_raise_bar_title">raise</string>
    <string name="edit_reps_bar_title">xx</string>
    <string name="edit_sets_bar_title">xx</string>
    <string name="vertical_bar_contentDescription">progressBar</string>
    <string name="vertical_bar_default_text">0</string>
    <string name="edit_label_default_text">label</string>
    <string name="action_toggle_editmode">edit workout</string>
    <string name="action_switch_workout">switch workout</string>
    <string name="action_create_new_workout">add workout</string>
    <string name="action_finish_workout">finish workout</string>
    <string name="save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="pager_overflow">show actions</string>
    <string name="action_exercise_delete">delete exercise</string>
    <string name="action_exercise_add_before_selected">add new exercise before</string>
    <string name="action_exercise_add_behind_selected">add new exercise behind</string>
    <string name="action_read_qrcode_failed">qrcode is not a fitbuddy workout</string>
    <string name="dialog_change_weight">change weight of set</string>
    <string name="ok">OK</string>
    <string name="decimal_point">,</string>
    <string name="unsaved_changes">unsaved changes</string>
    <string name="has_deleted_workout">workout deleted</string>
    <string name="has_deleted_exercise">exercise deleted</string>
    <string name="dialog_change_sets">change sets</string>
    <string name="dialog_change_reps">change reps</string>
    <string name="dialog_change_name">change name</string>
</resources>
