<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/primary_options_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_vertical_view"
    android:paddingRight="@dimen/padding_vertical_view">

    <Button
        android:id="@+id/buttonEditWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_bottom_view"
        android:drawableLeft="@drawable/ic_action_edit"
        android:text="@string/action_toggle_editmode"
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/buttonSwitchWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_bottom_view"
        android:drawableLeft="@drawable/ic_action_change_exercise"
        android:text="@string/action_switch_workout"
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/buttonAddWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_new_exercise"
        android:text="@string/action_create_new_workout"
        android:textSize="@dimen/font_size" />

</LinearLayout>